--- a/js/es6总结/12.类.md
+++ b/js/es6总结/12.类.md
@@ -36,6 +36,27 @@ Object.getOwnPropertyNames(Point.prototype)
 // ["constructor","toString"]
 ```
 
+2. 由于类的方法都定义在 prototype 对象上面，所以类的新方法可以添加在 prototype 对象上面。Object.assign 方法可以很方便地一次向类添加多个方法。
+
+```
+class Point {
+  constructor(){
+    // ...
+  }
+}
+
+Object.assign(Point.prototype, {
+  toString(){},
+  toValue(){}
+});
+```
+
+3. prototype 对象的 constructor 属性，直接指向“类”的本身，这与 ES5 的行为是一致的。
+
+```
+Point.prototype.constructor === Point // true
+```
+
 ### 二：constructor 方法
 
 1. constructor 方法默认返回实例对象（即 this），完全可以指定返回另外一个对象。
@@ -117,3 +138,202 @@ inst.prop = 123;
 inst.prop
 // 'getter'
 ```
+
+### 五：属性表达式
+
+1. 类的属性名，可以采用表达式。
+
+```
+let methodName = 'getArea';
+
+class Square {
+  constructor(length) {
+    // ...
+  }
+
+  [methodName]() {
+    // ...
+  }
+}
+```
+
+### 六：Class 表达式
+
+1. 与函数一样，类也可以使用表达式的形式定义。
+
+```
+const MyClass = class Me {
+  getClassName() {
+    return Me.name;
+  }
+};
+```
+
+上面代码使用表达式定义了一个类。需要注意的是，这个类的名字是 MyClass 而不是 Me，Me 只在 Class 的内部代码可用，指代当前类。
+
+```
+let inst = new MyClass();
+inst.getClassName() // Me
+Me.name // ReferenceError: Me is not defined
+```
+
+上面代码表示，Me 只在 Class 内部有定义。
+
+如果类的内部没用到的话，可以省略 Me，也就是可以写成下面的形式。
+
+```
+const MyClass = class { /* ... */ };
+```
+
+采用 Class 表达式，可以写出立即执行的 Class。
+
+```
+let person = new class {
+  constructor(name) {
+    this.name = name;
+  }
+
+  sayName() {
+    console.log(this.name);
+  }
+}('张三');
+
+person.sayName(); // "张三"
+```
+
+### 七：注意点
+
+1. 类不存在变量提升（hoist），这一点与 ES5 完全不同。
+
+```
+new Foo(); // ReferenceError
+class Foo {}
+```
+
+2. 由于本质上，ES6 的类只是 ES5 的构造函数的一层包装，所以函数的许多特性都被 Class 继承，包括 name 属性。
+
+```
+class Point {}
+Point.name // "Point"
+```
+
+3. 类的方法内部如果含有 this，它默认指向类的实例。但是，必须非常小心，一旦单独使用该方法，很可能报错。
+
+```
+class Logger {
+  printName(name = 'there') {
+    this.print(`Hello ${name}`);
+  }
+
+  print(text) {
+    console.log(text);
+  }
+}
+
+const logger = new Logger();
+const { printName } = logger;
+printName(); // TypeError: Cannot read property 'print' of undefined
+```
+
+上面代码中，printName 方法中的 this，默认指向 Logger 类的实例。但是，如果将这个方法提取出来单独使用，this 会指向该方法运行时所在的环境，因为找不到 print 方法而导致报错。
+
+一个比较简单的解决方法是，在构造方法中绑定 this，这样就不会找不到 print 方法了。
+
+```
+class Logger {
+  constructor() {
+    this.printName = this.printName.bind(this);
+  }
+
+  // ...
+}
+```
+
+另一种解决方法是使用箭头函数。
+
+```
+class Logger {
+  constructor() {
+    this.printName = (name = 'there') => {
+      this.print(`Hello ${name}`);
+    };
+  }
+
+  // ...
+}
+```
+
+### 八：静态方法
+
+1. 类相当于实例的原型，所有在类中定义的方法，都会被实例继承。如果在一个方法前，加上 static 关键字，就表示该方法不会被实例继承，而是直接通过类来调用，这就称为“静态方法”。
+
+```
+class Foo {
+  static classMethod() {
+    return 'hello';
+  }
+}
+
+Foo.classMethod() // 'hello'
+
+var foo = new Foo();
+foo.classMethod()
+// TypeError: foo.classMethod is not a function
+```
+
+注意，如果静态方法包含 this 关键字，这个 this 指的是类，而不是实例。
+
+```
+class Foo {
+  static bar() {
+    this.baz();
+  }
+  static baz() {
+    console.log('hello');
+  }
+  baz() {
+    console.log('world');
+  }
+}
+
+Foo.bar() // hello
+```
+
+另外，从这个例子还可以看出，静态方法可以与非静态方法重名。
+
+2. 父类的静态方法，可以被子类继承。
+
+```
+class Foo {
+  static classMethod() {
+    return 'hello';
+  }
+}
+
+class Bar extends Foo {
+}
+
+Bar.classMethod() // 'hello'
+```
+
+静态方法也是可以从 super 对象上调用的。
+
+```
+class Foo {
+  static classMethod() {
+    return 'hello';
+  }
+}
+
+class Bar extends Foo {
+  static classMethod() {
+    return super.classMethod() + ', too';
+  }
+}
+
+Bar.classMethod() // "hello, too"
+```
+
+### 九：实例属性的新写法
+
+1.
