--- a/js/es6总结/12.类.md
+++ b/js/es6总结/12.类.md
@@ -336,4 +336,29 @@ Bar.classMethod() // "hello, too"
 
 ### 九：实例属性的新写法
 
-1.
+1. 实例属性 this.\_count 定义在 constructor()方法里面。另一种写法是，这个属性也可以定义在类的最顶层，其他都不变。
+
+```
+class IncreasingCounter {
+  _count = 0;
+  get value() {
+    console.log('Getting the current value!');
+    return this._count;
+  }
+  increment() {
+    this._count++;
+  }
+}
+```
+
+上面代码中，实例属性\_count 与取值函数 value()和 increment()方法，处于同一个层级。这时，不需要在实例属性前面加上 this。
+
+这种新写法的好处是，所有实例对象自身的属性都定义在类的头部，看上去比较整齐，一眼就能看出这个类有哪些实例属性。
+
+### 十：静态属性
+
+1. 静态属性指的是 Class 本身的属性，即 Class.propName，而不是定义在实例对象（this）上的属性。
+
+```
+
+```
