--- a/js/es6总结/4.数组的扩展.md
+++ b/js/es6总结/4.数组的扩展.md
@@ -188,3 +188,15 @@ Array(3) // [, , ,]
 ```
 
 ES6 则是明确将空位转为 undefined。
+
+### 七：补充
+
+1. Array.from()还可以接受第二个参数，作用类似于数组的 map 方法，用来对每个元素进行处理。
+
+```
+let array = [0,1,2,3,4];
+let arrNew = Array.from(array, x => x * x);
+console.log(arrNew);
+// 等同于
+let arrNew = Array.from(array).map(x => x * x);
+```
