--- a/js/weixin/2.代码简洁.md
+++ b/js/weixin/2.代码简洁.md
@@ -116,3 +116,253 @@ console.log(newName); // ['Ryan', 'McDermott'];
 如果当用户点击购买时，网络出现故障， purchase() 方法一直在重复调用，与此同时用户又添加了新的商品，这时网络又恢复了。那么 purchase() 方法获取到 购物车数组 就是错误的。
 
 为了避免这种问题，我们需要在每次新增商品时，克隆 购物车数组 并返回新的数组。
+
+```
+const addItemToCart = (cart, item) => {
+  return [...cart, {item, date: Date.now()}]
+};
+```
+
+9. 不要写全局方法
+
+在 JavaScript 中，永远不要污染全局，会在生产环境中产生难以预料的 bug。举个例子，比如你在 Array.prototype 上新增一个 diff 方法来判断两个数组的不同。而你同事也打算做类似的事情，不过他的 diff 方法是用来判断两个数组首位元素的不同。很明显你们方法会产生冲突，遇到这类问题我们可以用 ES2015/ES6 的语法来对 Array 进行扩展。
+
+```
+class SuperArray extends Array {
+  diff(comparisonArray) {
+    const hash = new Set(comparisonArray);
+    return this.filter(elem => !hash.has(elem));
+  }
+}
+```
+
+10. 比起命令式我更喜欢函数式编程
+
+函数式变编程可以让代码的逻辑更清晰更优雅，方便测试。
+
+```
+const programmerOutput = [
+  {
+    name: 'Uncle Bobby',
+    linesOfCode: 500
+  }, {
+    name: 'Suzie Q',
+    linesOfCode: 1500
+  }, {
+    name: 'Jimmy Gosling',
+    linesOfCode: 150
+  }, {
+    name: 'Gracie Hopper',
+    linesOfCode: 1000
+  }
+];
+let totalOutput = programmerOutput
+  .map(output => output.linesOfCode)
+  .reduce((totalLines, lines) => totalLines + lines, 0)
+```
+
+11. 封装条件语句
+
+```
+function shouldShowSpinner(fsm, listNode) {
+  return fsm.state === 'fetching' && isEmpty(listNode);
+}
+
+if (shouldShowSpinner(fsmInstance, listNodeInstance)) {
+  // ...
+}
+```
+
+12. 尽量别用“非”条件句
+
+```
+function isDOMNodePresent(node) {
+  // ...
+}
+
+if (isDOMNodePresent(node)) {
+  // ...
+}
+```
+
+13. 避免使用条件语句
+
+Q：不用条件语句写代码是不可能的。
+
+A：绝大多数场景可以用多态替代。
+
+Q：用多态可行，但为什么就不能用条件语句了呢？
+
+A：为了让代码更简洁易读，如果你的函数中出现了条件判断，那么说明你的函数不止干了一件事情，违反了函数单一原则。
+
+```
+class Airplane {
+  // ...
+}
+// 波音777
+class Boeing777 extends Airplane {
+  // ...
+  getCruisingAltitude() {
+    return this.getMaxAltitude() - this.getPassengerCount();
+  }
+}
+// 空军一号
+class AirForceOne extends Airplane {
+  // ...
+  getCruisingAltitude() {
+    return this.getMaxAltitude();
+  }
+}
+// 赛纳斯飞机
+class Cessna extends Airplane {
+  // ...
+  getCruisingAltitude() {
+    return this.getMaxAltitude() - this.getFuelExpenditure();
+  }
+}
+```
+
+14. 避免类型检查（第一部分）
+
+JavaScript 是无类型的，意味着你可以传任意类型参数，这种自由度很容易让人困扰，不自觉的就会去检查类型。仔细想想是你真的需要检查类型还是你的 API 设计有问题？
+
+15. 避免类型检查（第二部分）
+
+如果你需要做静态类型检查，比如字符串、整数等，推荐使用 TypeScript，不然你的代码会变得又臭又长。
+
+16. 删除弃用代码
+
+很多时候有些代码已经没有用了，但担心以后会用，舍不得删。
+如果你忘了这件事，这些代码就永远存在那里了。
+放心删吧，你可以在代码库历史版本中找他它。
+
+17. 用 get、set 方法操作数据
+
+这样做可以带来很多好处，比如在操作数据时打日志，方便跟踪错误；在 set 的时候很容易对数据进行校验…
+
+```
+function makeBankAccount() {
+  // 私有变量
+  let balance = 0;
+
+  function getBalance() {
+    return balance;
+  }
+
+  function setBalance(amount) {
+    // ... 在更新 balance 前，对 amount 进行校验
+    balance = amount;
+  }
+
+  return {
+    // ...
+    getBalance,
+    setBalance,
+  };
+}
+
+const account = makeBankAccount();
+account.setBalance(100);
+```
+
+18. 使用私有变量
+
+可以用闭包来创建私有变量
+
+```
+function makeEmployee(name) {
+  return {
+    getName() {
+      return name;
+    },
+  };
+}
+
+const employee = makeEmployee('John Doe');
+console.log(`Employee name: ${employee.getName()}`);
+// Employee name: John Doe
+delete employee.name;
+console.log(`Employee name: ${employee.getName()}`);
+// Employee name: John Doe
+```
+
+19. SOLID 是几个单词首字母组合而来，分别表示 单一功能原则、开闭原则、里氏替换原则、接口隔离原则以及依赖反转原则。
+
+**单一功能原则**
+
+如果一个类干的事情太多太杂，会导致后期很难维护。我们应该厘清职责，各司其职减少相互之间依赖。
+
+**开闭原则**
+
+“开”指的就是类、模块、函数都应该具有可扩展性，“闭”指的是它们不应该被修改。也就是说你可以新增功能但不能去修改源码。
+
+**里氏替换原则**
+
+名字很唬人，其实道理很简单，就是子类不要去重写父类的方法。
+
+**接口隔离原则**
+
+JavaScript 几乎没有接口的概念，所以这条原则很少被使用。官方定义是“客户端不应该依赖它不需要的接口”，也就是接口最小化，把接口解耦。
+
+**依赖反转原则**
+
+说就两点：
+
+高层次模块不能依赖低层次模块，它们依赖于抽象接口。
+抽象接口不能依赖具体实现，具体实现依赖抽象接口。
+总结下来就两个字，解耦。
+
+20. 测试
+
+随着项目变得越来越庞大，时间线拉长，有的老代码可能半年都没碰过，如果此时上线，你有信心这部分代码能正常工作吗？测试的覆盖率和你的信心是成正比的。
+
+PS: 如果你发现你的代码很难被测试，那么你应该优化你的代码了。
+
+**单一化**
+
+```
+import assert from 'assert';
+
+describe('MakeMomentJSGreatAgain', () => {
+  it('handles 30-day months', () => {
+    const date = new MakeMomentJSGreatAgain('1/1/2015');
+    date.addDays(30);
+    assert.equal('1/31/2015', date);
+  });
+
+  it('handles leap year', () => {
+    const date = new MakeMomentJSGreatAgain('2/1/2016');
+    date.addDays(28);
+    assert.equal('02/29/2016', date);
+  });
+
+  it('handles non-leap year', () => {
+    const date = new MakeMomentJSGreatAgain('2/1/2015');
+    date.addDays(28);
+    assert.equal('03/01/2015', date);
+  });
+});
+```
+
+21. 不再使用回调
+
+不会有人愿意去看嵌套回调的代码，用 Promises 替代回调吧。
+
+**Async/Await 比起 Promises 更简洁**
+
+```
+import { get } from 'request-promise';
+import { writeFile } from 'fs-promise';
+
+async function getCleanCodeArticle() {
+  try {
+    const response = await get('https://en.wikipedia.org/wiki/Robert_Cecil_Martin');
+    await writeFile('article.html', response);
+    console.log('File written');
+  } catch(err) {
+    console.error(err);
+  }
+}
+```
+
+22. 只有业务逻辑需要注释
