--- a/python/像计算机科学家一样思考/第三章函数.md
+++ b/python/像计算机科学家一样思考/第三章函数.md
@@ -13,4 +13,12 @@ print(float(32))  >>> 32.0
 print(float('3.2222')) >>>3.2222
 ```
 
-3. str 可以将其实参转换成字符串：
+3. str 可以将其实参转换成字符串
+4. len()可以返回字符串长度
+5. print 函数默认会自动换行，但是你可以阻止这个行为，只需要像下面这样将行结尾变成一个空格：
+
+```
+print('+', end=' ')
+print('-')
+>>>+ -
+```
