--- a/python/像计算机科学家一样思考/第八章字符串.md
+++ b/python/像计算机科学家一样思考/第八章字符串.md
@@ -10,3 +10,23 @@ string[n:m]
 string = "abcde"
 print(string[1:3]) >>>bc
 ```
+
+如果你省略第一个索引(冒号前面的值)，切片起始于字符串头部。如果你省略第二个索
+引，切片一直到字符串结尾：
+
+```
+string = "abcde"
+print(string[:3]) >>>'abc'
+
+string = "abcde"
+print(string[3:]) >>> 'de'
+```
+
+如果第一个索引大于或等于第二个，结果是空字符串 3 ，用两个引号表示：
+
+```
+string = "abcde"
+print(string[3:3]) >>> ''
+```
+
+2. 字符串是不可变的
