--- a/python/像计算机科学家一样思考/第八章字符串.md
+++ b/python/像计算机科学家一样思考/第八章字符串.md
@@ -30,3 +30,9 @@ print(string[3:3]) >>> ''
 ```
 
 2. 字符串是不可变的
+
+3. 单词 in 是一个布尔运算符，接受两个字符串。如果第一个作为子串出现在第二个中，则返回 True：
+
+```
+print("a" in "abc") >>>True
+```
