--- a/js/js文章/字符串方法.md
+++ b/js/js文章/字符串方法.md
@@ -15,3 +15,57 @@ console.log(str.indexOf("Hello"))//0
 console.log(str.indexOf("World"))//-1
 console.log(str.indexOf("world"))///6
 ```
+
+3. match()
+
+match() 方法可在字符串内检索指定的值，或找到一个或多个正则表达式的匹配。该方法类似 indexOf() 和 lastIndexOf()，但是它返回指定的值，而不是字符串的位置。
+
+```
+var str="1 abc 2 def 3"
+console.log(str.match(/\d+/g))//123
+```
+
+4. search()
+
+search() 方法用于检索字符串中指定的子字符串，或检索与正则表达式相匹配的子字符串。要执行忽略大小写的检索，请追加标志 i。如果没有找到任何匹配的子串，则返回 -1。
+
+```
+var str="abc Def!"
+console.log(str.replace(/abc/, "CBA"))//CBA Def!
+```
+
+5. slice()
+
+提取字符串的片断，并在新的字符串中返回被提取的部分。
+stringObject.slice(start,end);
+start :要抽取的片断的起始下标。如果是负数，则该参数规定的是从字符串的尾部开始算起的位置。也就是说，-1 指字符串的最后一个字符，-2 指倒数第二个字符，以此类推。
+end：紧接着要抽取的片段的结尾的下标。若未指定此参数，则要提取的子串包括 start 到原字符串结尾的字符串。如果该参数是负数，那么它规定的是从字符串的尾部开始算起的位置。
+
+```
+var str="abc def ghk"
+console.log(str.slice(6))//f ghk
+```
+
+6. split()
+
+把字符串分割为字符串数组。
+
+```
+var str="abc def ghi jkl"
+console.log(str.split(" "))//["abc", "def", "ghi", "jkl"]
+console.log(str.split("") )//["a", "b", "c", " ", "d", "e", "f", " ", "g", "h", "i", " ", "j", "k", "l"]
+console.log(str.split(" ",3))//["abc", "def", "ghi"]
+```
+
+7. 字符串的遍历器接口 for of
+
+```
+for (let codePoint of 'abc') {
+  console.log(codePoint)
+}
+// "a"
+// "b"
+// "c"
+```
+
+8.
