--- a/others/questions/2018总结.md
+++ b/others/questions/2018总结.md
@@ -30,3 +30,17 @@ function timeOutFun(){
 ```
 我们只是在setTimeout的方法里面又调用了一次setTimeout，就可以达到间歇调用的目的。
 setInterval间歇调用，是在前一个方法执行前，就开始计时，比如间歇时间是500ms，那么不管那时候前一个方法是否已经执行完毕，都会把后一个方法放入执行的序列中。这时候就会发生一个问题，假如前一个方法的执行时间超过500ms，加入是1000ms，那么就意味着，前一个方法执行结束后，后一个方法马上就会执行，因为此时间歇时间已经超过500ms了。
+
+2. 事件防抖和事件节流
+
+    - 事件防抖：debounce的作用是在让在用户动作停止后延迟x ms再执行回调。
+    - 事件节流：throttle的作用是在用户动作时没隔一定时间（如200ms）执行一次回调。
+
+3. 数组中的forEach和map的区别
+
++ 相同点
+- 都是循环遍历数组中的每一项
+- forEach和map方法里每次执行匿名函数都支持3个参数，参数分别是   item（当前每一项），index（索引值），arr（原数组）
+- 匿名函数中的this都是指向window
+- 只能遍历数组
+- 都不会改变原数组
