--- a/others/questions/2018总结.md
+++ b/others/questions/2018总结.md
@@ -107,4 +107,108 @@ Function.prototype === Function.__proto__;//true
 
 - Function 的 prototype 指向一个特殊匿名函数，而这个特殊匿名函数的`__proto__`指向 Object.prototype
 
-6.
+6. 函数提升
+
+```
+if (true) {
+    function foo() {
+        document.write( "1" );
+    }
+}
+else {
+    function foo() {
+        document.write( "2" );
+    }
+}
+
+foo();      // 2
+```
+
+在我们所认识的 javascript 里，这段代码的输出结果为 2。这个叫做函数声明提升，不仅仅提升了函数名，也提升了函数的定义。如果你基础不扎实的话，可以看看这篇文章：深入理解 javascript 之 IIFE
+
+但是在 ES6 里，这段代码或抛出 ReferenceErroe 错误。因为{}的块级作用域，导致外面访问不到 foo()，也就是说函数声明和 let 定义变量一样，都被限制在块级作用域中了。
+
+7. 事件循环
+
+简要介绍：谈谈 promise.resove,setTimeout,setImmediate,process.nextTick 在 EvenLoop 队列中的执行顺序
+
+macro-task（宏任务）队列真实包含任务：
+script(主程序代码),setTimeout, setInterval, setImmediate, I/O, UI rendering
+
+micro-task（微任务）队列真实包含任务：
+process.nextTick, Promises, Object.observe, MutationObserver
+
+由此我们得到的执行顺序应该为：
+
+script(主程序代码)—>process.nextTick—>Promises…——>setTimeout——>setInterval——>setImmediate——> I/O——>UI rendering
+
+在 ES6 中 macro-task 队列又称为 ScriptJobs，而 micro-task 又称 PromiseJobs
+
+8. 懒加载
+
+原理：先将 img 标签中的 src 链接设为同一张图片（空白图片），将其真正的图片地址存储再 img 标签的自定义属性中（比如 data-src）。当 js 监听到该图片元素进入可视窗口时，即将自定义属性中的地址存储到 src 属性中，达到懒加载的效果。
+
+既然懒加载的原理是基于判断元素是否出现在窗口可视范围内，首先我们写一个函数判断元素是否出现在可视范围内：
+
+```
+function isVisible($node){
+    var winH = $(window).height(),
+        scrollTop = $(window).scrollTop(),
+        offSetTop = $(window).offSet().top;
+    if (offSetTop < winH + scrollTop) {
+        return true;
+    } else {
+        return false;
+    }
+}
+```
+
+再添加上浏览器的事件监听函数，让浏览器每次滚动就检查元素是否出现在窗口可视范围内：
+
+```
+$(window).on("scroll", function{
+    if (isVisible($node)){
+        console.log(true);
+    }
+})
+```
+
+我们已经很接近了，现在我们要做的是，让元素只在第一次被检查到时打印 true，之后就不再打印了
+
+```
+var hasShowed = false;
+$(window).on("sroll",function{
+    if (hasShowed) {
+        return;
+    } else {
+        if (isVisible($node)) {
+            hasShowed = !hasShowed;
+            console.log(true);
+        }
+    }
+})
+```
+
+懒加载实例
+
+```
+var scrollTop = window.scrollY;
+    var imgs = Array.from(document.querySelectorAll('img'));
+
+    window.onload = function(){
+        lazyLoad();
+    }
+
+    window.onscroll = () => {
+        scrollTop = window.scrollY;
+        lazyLoad();
+    }
+    function lazyLoad(){
+        imgs.forEach((item,index)=>{
+            if( item.offsetTop < window.innerHeight + scrollTop ){
+                console.log(item.offsetTop)
+                item.setAttribute('src',item.dataset.src)
+            }
+        })
+    }
+```
