--- a/others/questions/2018总结.md
+++ b/others/questions/2018总结.md
@@ -308,3 +308,13 @@ console.log(a.user); //追梦子
 第一个传的参数都是对象，不能传入构造函数，构造函数的 typeof 是 function
 
 传 null 或 undefined 时，将是 JS 执行环境的全局变量。浏览器中是 window，其它环境（如 node）则是 global
+
+13. 对 inline 元素设置 padding、margin 有效吗？
+
+    - inline 元素设置 width 和 height 无效
+    - 设置 margin-left、margin-right、padding-left、padding-right 有效
+    - 设置 margin-top、margin-bottom、padding-top、padding-bottom 无效
+
+14. line-height 的继承【带单位和不带单位】
+    - 如果 line-height 属性值有单位，那么继承的值则是换算后的一个具体的 px 级别的值；
+    - 而如果属性值没有单位，则浏览器会直接继承这个 “因子（数值）”，而非计算后的具体值，此时它的 line-height 会根据本身的 font-size 值重新计算得到新的 line-height 值。
