--- a/python/像计算机科学家一样思考/第八章字符串.md
+++ b/python/像计算机科学家一样思考/第八章字符串.md
@@ -36,3 +36,24 @@ print(string[3:3]) >>> ''
 ```
 print("a" in "abc") >>>True
 ```
+
+4. 遍历 python 字符串
+
+```
+word = "banana
+count = 0
+for letter in word:
+    if letter = "a":
+        count = count + 1
+print(count)
+```
+
+5. find 查找字符串在所查找字符串的位置
+
+```
+word = banana
+index = word.find("a")
+index >>> 1
+```
+
+6.
