--- a/python/像计算机科学家一样思考/第十章列表.md
+++ b/python/像计算机科学家一样思考/第十章列表.md
@@ -5,3 +5,45 @@ a = [1, 2, 3]
 b = [4, 5, 6]
 print(a+b)
 ```
+
+2. 列表切片
+
+```
+a = [1, 2, 3]
+print(a[:])
+```
+
+如果你省略第一个索引，切片将从列表头开始。如果你省略第二个索引，切片将会到列
+表尾结束。所以如果你两者都省略，切片就是整个列表的一个拷贝。
+
+```
+> > > t = [ ' a ' , ' b ' , ' c ' , ' d ' , ' e ' , ' f ' ]
+> > > t [ 1:3 ] = [ ' x ' , ' y ']
+> > > t
+[ ' a ' , ' x ' , ' y ' , ' d ' , 'e ' , ' f ' ]
+```
+
+3. append 添加到末尾
+
+```
+t = [1, 2, 3]
+t.append(4)
+print(t)
+```
+
+4. extend 将接受一个列表作为参数，并将其其中的所有元素添加至目标列表中
+
+```
+t = [1, 2, 3]
+t2 = [1, 2, 3]
+t.extend(t2)
+print(t)
+```
+
+5. sort 将列表中的元素从小到大进行排序
+
+6. 有多种方法可以从列表中删除一个元素。如果你知道元素的下标，你可以使用 pop
+   pop 修改列表，并返回被移除的元素。如果你不提供下标，它将移除并返回最后一个元
+   素
+7. 如果你知道要删除的值(但是不知道其下标)，你可以使用 remove
+8. [1:] 删除头部
